--- a/src/Select/index.less
+++ b/src/Select/index.less
@@ -93,6 +93,7 @@
     padding: 0;
     line-height: 34px;
     white-space: nowrap;
+    padding: 0 12px;
 
     &:hover {
       background: #f2f6fa;
