--- a/src/Select/index.less
+++ b/src/Select/index.less
@@ -94,6 +94,7 @@
     line-height: 34px;
     white-space: nowrap;
     padding: 0 12px;
+    font-size: 12px;
 
     &:hover {
       background: #f2f6fa;
