--- a/src/Descriptions/index.less
+++ b/src/Descriptions/index.less
@@ -9,28 +9,34 @@
       border-collapse: collapse;
       table-layout: auto;
       border: 1px solid #e9eaf2;
+      border-left: 0;
+      border-bottom: 0;
     }
     th {
       flex: 0 0 120px;
-      padding: 15px 12px;
+      padding: 12px 12px;
       width: 120px;
       font-size: 12px;
       color: #7a8199;
-      line-height: 17px;
+      line-height: 16px;
       background: #f0f2f5;
+      border-top: 0;
+      text-align: left;
       border-bottom: 1px solid #e9eaf2;
       border-right: 1px solid #e9eaf2;
+      border-left: 1px solid #e9eaf2;
       color: #15171f;
+      font-weight: normal;
       &:after {
         content: '：';
       }
     }
 
     td {
-      padding: 15px 12px;
+      padding: 12px 12px;
       font-size: 12px;
       color: #3e4046;
-      line-height: 17px;
+      line-height: 16px;
       background: #fff;
       border-bottom: 1px solid #f0f2f5;
       color: #15171f;
