--- a/src/Popover/index.less
+++ b/src/Popover/index.less
@@ -7,6 +7,115 @@
   cursor: pointer;
 }
 
+.@{prefix}-popup {
+  &-top {
+    .@{prefix}-popover {
+      &:after {
+        filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.2));
+      }
+    }
+  }
+
+  &-top-left {
+    .@{prefix}-popover {
+      &:after {
+        right: auto;
+        left: 16px;
+        filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.2));
+      }
+    }
+  }
+
+  &-top-right {
+    .@{prefix}-popover {
+      &:after {
+        left: auto;
+        right: 16px;
+        filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.2));
+      }
+    }
+  }
+
+  &-left {
+    .@{prefix}-popover {
+      &:after {
+        left: auto;
+        top: 50%;
+        margin-top: -5px;
+        right: -10px;
+        border-right: 5px solid transparent;
+        border-left: 5px solid #fff;
+        border-top: 5px solid transparent;
+        border-bottom: 5px solid transparent;
+      }
+    }
+  }
+
+  &-right {
+    .@{prefix}-popover {
+      &:after {
+        right: auto;
+        top: 50%;
+        margin-top: -5px;
+        left: -5px;
+        border-left: 5px solid transparent;
+        border-right: 5px solid #fff;
+        border-top: 5px solid transparent;
+        border-bottom: 5px solid transparent;
+        filter: drop-shadow(-2px 2px 2px rgba(0, 0, 0, 0.2));
+      }
+    }
+  }
+
+  &-bottom {
+    .@{prefix}-popover {
+      &:after {
+        top: -5px;
+        margin-top: -5px;
+        border-right: 5px solid transparent;
+        border-bottom: 5px solid #fff;
+        border-left: 5px solid transparent;
+        border-top: 5px solid transparent;
+        filter: drop-shadow(2px -2px 2px rgba(0, 0, 0, 0.2));
+      }
+    }
+  }
+
+  &-bottom-left {
+    .@{prefix}-popover {
+      &:after {
+        right: auto;
+        left: 16px;
+        top: -5px;
+        margin-top: -5px;
+        border-right: 5px solid transparent;
+        border-bottom: 5px solid #fff;
+        border-left: 5px solid transparent;
+        border-top: 5px solid transparent;
+
+        filter: drop-shadow(2px -2px 2px rgba(0, 0, 0, 0.2));
+      }
+    }
+  }
+
+  &-bottom-right {
+    .@{prefix}-popover {
+      &:after {
+        left: auto;
+        right: 16px;
+        top: -5px;
+        margin-top: -5px;
+        border-right: 5px solid transparent;
+        border-bottom: 5px solid #fff;
+        border-left: 5px solid transparent;
+        border-top: 5px solid transparent;
+
+        filter: drop-shadow(2px -2px 2px rgba(0, 0, 0, 0.2));
+      }
+    }
+  }
+}
+
 .@{prefix}-popover {
   position: relative;
   z-index: 10;
@@ -46,117 +155,6 @@
 
     & > * {
       margin-left: 16px;
-    }
-  }
-
-  &-top {
-    &.@{prefix}-popover {
-      &:after {
-        filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.2));
-      }
-    }
-  }
-
-  &-top-left {
-    &.@{prefix}-popover {
-      &:after {
-        right: auto;
-        left: 16px;
-        transform: translate(0, 0);
-        filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.2));
-      }
-    }
-  }
-
-  &-top-right {
-    &.@{prefix}-popover {
-      &:after {
-        left: auto;
-        right: 16px;
-        transform: translate(0, 0);
-        filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.2));
-      }
-    }
-  }
-
-  &-left {
-    &.@{prefix}-popover {
-      &:after {
-        left: auto;
-        top: 50%;
-        margin-top: -5px;
-        right: -10px;
-        border-right: 5px solid transparent;
-        border-left: 5px solid #fff;
-        border-top: 5px solid transparent;
-        border-bottom: 5px solid transparent;
-      }
-    }
-  }
-
-  &-right {
-    &.@{prefix}-popover {
-      &:after {
-        right: auto;
-        top: 50%;
-        margin-top: -5px;
-        left: -5px;
-        border-left: 5px solid transparent;
-        border-right: 5px solid #fff;
-        border-top: 5px solid transparent;
-        border-bottom: 5px solid transparent;
-        filter: drop-shadow(-2px 2px 2px rgba(0, 0, 0, 0.2));
-      }
-    }
-  }
-
-  &-bottom {
-    &.@{prefix}-popover {
-      &:after {
-        top: -5px;
-        margin-top: -5px;
-        border-right: 5px solid transparent;
-        border-bottom: 5px solid #fff;
-        border-left: 5px solid transparent;
-        border-top: 5px solid transparent;
-        filter: drop-shadow(2px -2px 2px rgba(0, 0, 0, 0.2));
-      }
-    }
-  }
-
-  &-bottom-left {
-    &.@{prefix}-popover {
-      &:after {
-        right: auto;
-        left: 16px;
-        top: -5px;
-        margin-top: -5px;
-        border-right: 5px solid transparent;
-        border-bottom: 5px solid #fff;
-        border-left: 5px solid transparent;
-        border-top: 5px solid transparent;
-        transform: translate(0, 0);
-
-        filter: drop-shadow(2px -2px 2px rgba(0, 0, 0, 0.2));
-      }
-    }
-  }
-
-  &-bottom-right {
-    &.@{prefix}-popover {
-      &:after {
-        left: auto;
-        right: 16px;
-        top: -5px;
-        margin-top: -5px;
-        border-right: 5px solid transparent;
-        border-bottom: 5px solid #fff;
-        border-left: 5px solid transparent;
-        border-top: 5px solid transparent;
-        transform: translate(0, 0);
-
-        filter: drop-shadow(2px -2px 2px rgba(0, 0, 0, 0.2));
-      }
     }
   }
 }
