--- a/src/Popup/index.less
+++ b/src/Popup/index.less
@@ -5,35 +5,35 @@
   z-index: 999;
   left: 0;
   top: 0;
-  &-top {
-    transform: translate(-50%, -100%);
-  }
+  // &-top {
+  //   transform: translate(-50%, -100%);
+  // }
 
-  &-top-left {
-    transform: translate(-100%, -100%);
-  }
+  // &-top-left {
+  //   transform: translate(-100%, -100%);
+  // }
 
-  &-top-right {
-    transform: translate(0, -100%);
-  }
+  // &-top-right {
+  //   transform: translate(0, -100%);
+  // }
 
-  &-left {
-    transform: translate(-100%, -50%);
-  }
+  // &-left {
+  //   transform: translate(-100%, -50%);
+  // }
 
-  &-right {
-    transform: translate(0, -50%);
-  }
+  // &-right {
+  //   transform: translate(0, -50%);
+  // }
 
-  &-bottom {
-    transform: translate(-50%, 0);
-  }
+  // &-bottom {
+  //   transform: translate(-50%, 0);
+  // }
 
-  &-bottom-left {
-    transform: translate(-100%, 0);
-  }
+  // &-bottom-left {
+  //   transform: translate(-100%, 0);
+  // }
 
-  &-bottom-right {
-    transform: translate(0, 0);
-  }
+  // &-bottom-right {
+  //   transform: translate(0, 0);
+  // }
 }
