--- a/src/Tooltip/index.less
+++ b/src/Tooltip/index.less
@@ -9,23 +9,14 @@
   display: inline-block;
 }
 
-.@{prefix}-tooltip {
-  position: relative;
-  border-radius: 4px;
-  background: rgba(0, 0, 0, 0.75);
-  box-shadow: @shadowdefault;
-  display: none;
-  z-index: @modalZIndex;
-
-  &-visible {
-    display: block;
-  }
-
+.@{prefix}-popup {
   &-top {
+    .@{prefix}-tooltip {
+    }
   }
 
   &-top-left {
-    &.@{prefix}-tooltip {
+    .@{prefix}-tooltip {
       &:after {
         right: auto;
         left: 16px;
@@ -34,7 +25,7 @@
   }
 
   &-top-right {
-    &.@{prefix}-tooltip {
+    .@{prefix}-tooltip {
       &:after {
         left: auto;
         right: 16px;
@@ -43,7 +34,7 @@
   }
 
   &-left {
-    &.@{prefix}-tooltip {
+    .@{prefix}-tooltip {
       &:after {
         left: auto;
         top: 50%;
@@ -58,7 +49,7 @@
   }
 
   &-right {
-    &.@{prefix}-tooltip {
+    .@{prefix}-tooltip {
       &:after {
         right: auto;
         top: 50%;
@@ -73,7 +64,7 @@
   }
 
   &-bottom {
-    &.@{prefix}-tooltip {
+    .@{prefix}-tooltip {
       &:after {
         top: -5px;
         margin-top: -5px;
@@ -86,7 +77,7 @@
   }
 
   &-bottom-left {
-    &.@{prefix}-tooltip {
+    .@{prefix}-tooltip {
       &:after {
         right: auto;
         left: 16px;
@@ -101,7 +92,7 @@
   }
 
   &-bottom-right {
-    &.@{prefix}-tooltip {
+    .@{prefix}-tooltip {
       &:after {
         left: auto;
         right: 16px;
@@ -113,6 +104,19 @@
         border-top: 5px solid transparent;
       }
     }
+  }
+}
+
+.@{prefix}-tooltip {
+  position: relative;
+  border-radius: 4px;
+  background: rgba(0, 0, 0, 0.75);
+  box-shadow: @shadowdefault;
+  display: none;
+  z-index: @modalZIndex;
+
+  &-visible {
+    display: block;
   }
 
   &:after {
